# halfkelly

./: .gitignore  README.md  pyproject.toml
docs/: README.md  api_reference.md  getting_started.md  instruments.md
examples/: basic_usage.py  custom_instrument.py  step_by_step.py
src/aperion/: __init__.py
src/aperion/calculators/: __init__.py  position_sizing.py
src/aperion/instruments/: __init__.py  forex.py
src/aperion/utils/: __init__.py
src/halfkelly/: __init__.py
src/halfkelly/calculators/: __init__.py  exposure_tracker.py  position_sizing.py
src/halfkelly/instruments/: __init__.py  forex.py
src/halfkelly/models/: __init__.py  account.py  exposure.py  instrument.py  position.py  trade.py
src/halfkelly/utils/: __init__.py  formatting.py
tests/: __init__.py  test_instruments.py  test_position_sizing.py
